Primer commit desde bash

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "opinator",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,5 +10,7 @@
     "url": "opinator"
   },
   "author": "ricardo burczynski",
-  "license": "GPL-3.0"
+  "license": "GPL-3.0",
+  "keywords": [],
+  "description": ""
 }
